# PyRInText

./: CMakeLists.txt  JSON.g4  LICENSE  PyRInText.g4  README.md  antlr4json.cpp  antlr4json.h  cmdline.h  pyrintext.cpp  pyrintext.ini
etc/: pdflatex_pyr.bat  sumatrapdf_pyr.bat
tests/: test01.py  test01.r  test01.tex  test01_pyr.tex  test02ja.py  test02ja.tex  test02ja_pyr.tex
